--- a/HACKING.txt
+++ b/HACKING.txt
@@ -1,5 +1,4 @@
-Conventions:
-- C++ source file names are CamelCase if they define classes,
-  lowercase otherwise
-
-- C++ header files have the extension .hpp
+Conventions for C++ source code:
+- File names are CamelCase if they define classes, lowercase otherwise
+- Header files have the extension .hpp
+- Indentation is 4 spaces
