--- a/HACKING.txt
+++ b/HACKING.txt
@@ -2,3 +2,6 @@ Conventions for C++ source code:
 - File names are CamelCase if they define classes, lowercase otherwise
 - Header files have the extension .hpp
 - Indentation is 4 spaces
+
+Features not to be used in C++ source code:
+- constexpr (not supported in VS2012
